<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/blue_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="40dp"
                android:layout_height="?actionBarSize"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_arrow_left" />
        </com.google.android.material.appbar.AppBarLayout>


        <ImageView
            android:id="@+id/repoIv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="?actionBarSize"
            android:layout_marginBottom="200dp"
            android:contentDescription="@string/repository_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="400dp"
            android:layout_marginEnd="30dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/NameLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1.2"
                android:background="@drawable/card_view_bg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:text="@string/name"
                    android:layout_weight="0.2"
                    android:textAlignment="center"
                    android:textColor="@color/grayWhite" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.2"
                    android:textAlignment="center"
                    android:textColor="@color/black" />


                <TextView
                    android:id="@+id/Link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.2"
                    android:text="@string/ProjectLink"
                    android:textAlignment="center"
                    android:textColor="@color/grayWhite" />

                <TextView
                    android:id="@+id/tvLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.2"
                    android:textAlignment="center"
                    android:textColor="#4F0CE8">

                </TextView>


                <TextView
                    android:id="@+id/tvDescri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/Description"
                    android:layout_weight="0.2"
                    android:textAlignment="center"
                    android:textColor="@color/grayWhite" />

                <TextView
                    android:id="@+id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:linksClickable="true"
                    android:padding="10dp"
                    android:layout_weight="0.2"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>